--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding{
+        enabled=true
+    }
+    dataBinding{
+        enabled=true
+    }
 }
 
 dependencies {
@@ -40,4 +46,27 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //메테리얼
+    implementation 'com.google.android.material:material:1.1.0'
+    //레트로핏
+    def retrofit_version="2.8.1"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    //gson컨버터
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    //레트로핏 로깅 인터셉터
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"
+    //이미지 뷰를 위한 글라이드 라이브러리 사용
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+//
+    def lifecycle_version = "2.3.0"
+
+    // ViewModel - 라이프 사이클
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData - 데이터의 변경 사항을 알 수 있음
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    //Anko사용
+    implementation "org.jetbrains.anko:anko:0.10.5"
+    //lottie사용
+    implementation "com.airbnb.android:lottie:3.6.1"
 }
