--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,9 @@ dependencies {
     implementation "com.airbnb.android:lottie:3.6.1"
     //뷰페이저2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    def fragment_version = "1.3.0-alpha08"
+    // 프래그먼트 1.3.0
+    implementation "androidx.fragment:fragment:$fragment_version"
+    // 코틀린용 프래그먼트 1.3.0
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 }
