--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"
     //이미지 뷰를 위한 글라이드 라이브러리 사용
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:annotations:4.12.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 //
     def lifecycle_version = "2.3.0"
